--- a/pep/day13-reactScratch/style.css
+++ b/pep/day13-reactScratch/style.css
@@ -1,24 +1,54 @@
-body{
+body {
     background-color: yellow;
+    display: flex;
+    flex-direction: column;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
-.task-page{
+/* .task-page{
     margin: 2rem;
     padding: 2rem;
     color: brown;
     background-color: lime;
-}
+} */
 
-.user-input {
+.user-name-input {
     padding: 0.7rem 1rem;
     border: 1px solid lightgrey;
     margin: 0.75rem;
     font-size: 20px;
     border-radius: 0.75rem;
-    }
+}
+
+.user-place-input {
+    padding: 0.7rem 1rem;
+    border: 1px solid lightgrey;
+    margin: 0.75rem;
+    font-size: 20px;
+    border-radius: 0.75rem;
+}
+
+.user-desigination-input {
+    padding: 0.7rem 1rem;
+    border: 1px solid lightgrey;
+    margin: 0.75rem;
+    font-size: 20px;
+    border-radius: 0.75rem;
+}
+
+.submit-btn {
+    cursor: pointer;
+    background-color: #ff0000;
+   border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
